--- a/styles/event_after_after_style.css
+++ b/styles/event_after_after_style.css
@@ -238,7 +238,7 @@
 }
 .event_hash_6::after{
     background-image:url(../images_out/hash_6_average.png);
-    content:"Cactus cooler \A IPA's drink of choice";
+    content:"Hash and friends drinking Cactus Cooler \A IPA's drink of choice";
 }
 
 .event_hash_7{
@@ -274,7 +274,7 @@
 }
 .event_bubbly_tnt::after{
     background-image:url(../images_out/bubbly_tnt_average.png);
-    content:"We totally didn't see it off...";
+    content:"We totally didn't set it off...";
 }
 
 .event_witch_1{
@@ -334,7 +334,7 @@
 }
 .event_witch_5::after{
     background-image:url(../images_out/witch_5_average.png);
-    content:"More flying around \A We were losing hope...";
+    content:"Hash and friends flying around \A We were losing hope...";
 }
 
 .event_witch_6{
