--- a/styles/event_after_style.css
+++ b/styles/event_after_style.css
@@ -259,7 +259,7 @@
 }
 .event_march_laying_2::after{
     background-image:url(../images_out/march_laying_2_average.png);
-    content:"Crate and Mahoose laying together";
+    content:"Joe and Mahoose laying together";
 }
 
 .event_march_laying_3{
