--- a/styles/build_style.css
+++ b/styles/build_style.css
@@ -247,5 +247,5 @@
 }
 .build_graveyard::after{
     background-image:url(../images_out/graveyard_average.png);
-    content:"Personae Non Gratae \A God rest their souls from this needless torment"
+    content:"God rest their souls from this needless torment"
 }
